Fixed colhead alignment

--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,8 @@ th.colhead{
   color: #FFFFFF;
   min-width: 125px;
   padding: 10px;
-  margin: auto;
   text-align: center;
+  vertical-align: middle;
   text-transform: uppercase;
 }
 
